# librjss

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README  index.html
.github/workflows/: ci.yml  clib_tests.yml  docs.yml  release-lib.yml  release-server.yml
app/: .env.example  Cargo.toml
app/src/: config.rs  error.rs  main.rs  state.rs
app/src/handler/: check.rs  login.rs  logout.rs  mod.rs  proxy.rs
app/src/providers/: external.rs  hardcoded.rs  mod.rs
ctest/: test.c
docs/: index.html  librjss.3
examples/: cli_auth.rs  dev_server.rs
librjss/: .env.example  Cargo.toml
librjss/src/: ffi.rs  lib.rs
librjss/src/api/: mod.rs
librjss/src/api/auth/: cookies.rs  login.rs  logout.rs
librjss/src/handler/: config.rs  env.rs  error.rs  mod.rs  session_store.rs  types.rs
librjss/tests/: api_auth_io_test.rs  handler_config_test.rs  handler_error_test.rs  handler_mod_test.rs  test_shared_library.rs
src/: lib.rs
src/api/auth/: cookies.rs  endpoints.rs  mod.rs  session.rs
src/client/: auth.rs  file.rs  mod.rs  report.rs  resource.rs
src/client/auth/: app_parser.rs  http_helpers.rs  login.rs  logout.rs  mod.rs  session.rs  token.rs
src/client/methods/: delete.rs  get.rs  mod.rs  post.rs  post_form.rs  put.rs
src/handler/: env.rs  error.rs  mod.rs  session_store.rs  types.rs
src/handler/config/: auth_mode.rs  client_config.rs  mod.rs  validation.rs
src/handler/types/: boot.rs  login.rs  mod.rs  session.rs  user_info.rs
tests/: api_auth_tests.rs  client_tests.rs  env_tests.rs  error_tests.rs  file_tests.rs  handler_env_test.rs  handler_error_test.rs  handler_session.rs  handler_store_test.rs  handler_types_test.rs  report_tests.rs  resource_tests.rs  types_tests.rs
tests/fixtures/: real_app_page.html
