[package]
name = "librjss"
version = "2.1.0"
edition = "2024"
description = "Robust client library for Juragan Subsystem"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = { version = "2", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
backoff = { version = "0.4", features = ["tokio"] }
http = "1"
scraper = "0.18"
urlencoding = "2"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["macros", "rt"] }
serde_json = "1"
axum = "0.8.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
