[package]
name = "librjss"
version = "2.2.2"
edition = "2024"

authors = ["mroczect <mroczect@proton.me>"]
description = "Robust client library for Juragan Subsystem"
license = "MIT"
repository = "https://github.com/mroczect/librjss"
homepage = "https://github.com/mroczect/librjss"
documentation = "https://docs.rs/librjss"
readme = "README"
keywords = ["frappe", "erpnext", "api-client", "juragan-subsystem", "async"]
categories = ["web-programming", "api-bindings"]
exclude = ["/target", "/.git", "/.github", "/benches", "/examples", "/tests"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = { version = "2", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
backoff = { version = "0.4", features = ["tokio"] }
http = "1"
scraper = "0.18"
urlencoding = "2"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["macros", "rt"] }
serde_json = "1"
axum = "0.8.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
