[package]
name = "auth-server"
version = "0.1.0"
edition = "2024"

[dependencies]
librjss = { path = "../librjss" }
actix-web = "4"
actix-cors = "0.7"
reqwest = { version = "0.11", features = ["cookies", "json"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
time = "0.3"