[package]
name = "librjss"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cookie = "0.18"
rand = "0.8"
time = { version = "0.3", features = ["serde-well-known", "macros"] }
http = "0.2"
async-trait = "0.1"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt", "sync", "full"] }

[dev-dependencies]
actix-web = "4"
dotenv = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-cors = "0.7"
libloading = "0.8"